updated CSS for spacing issues

--- a/library-pizza-calculator.css
+++ b/library-pizza-calculator.css
@@ -11,17 +11,19 @@ fieldset legend {
     font-size: large;
     color: blue;
 }
+
 label, input {
     margin-top: 10px;
 }
+
 label { float: left;
     display: block;
     width: 250px;
     text-align: right;
     padding-right: 1em;
 }
+
 input { display: block;
-    margin-bottom: 2em;
 }
 
 button {
